setup routes in backend, sends file after token

--- a/rsvp/index.html
+++ b/rsvp/index.html
@@ -2,7 +2,7 @@
 <head>
 <script>
     function callREST() {
-        fetch(`https://gioandjake.com/submit?name=${document.getElementById('name').value}&attending=${document.getElementById('attending').value}&adults=${document.getElementById('adults').value}&children=${document.getElementById('children').value}`)
+        fetch(`https://gioandjake.com/submit/rsvp?name=${document.getElementById('name').value}&attending=${document.getElementById('attending').value}&plusone=${document.getElementById('plusone').value}`)
             .then((response) => response.text())
             .then(alert("Thank you!"));
     }
@@ -37,10 +37,11 @@
                 <option value="y">Yes</option>
                 <option value="n">No</option>
             </select><br><br>
-            <label for="adults">How many adults will be in your group (including you)?</label><br>
-            <input type="number" id="adults" name="adults"><br><br>
-            <label for="children">How many children will be in your group?</label><br>
-            <input type="number" id="children" name="children"><br><br>
+            <label for="plusone">Will you be bring a plus one?</label><br>
+            <select name="plusone" id="plusone">
+                <option value="y">Yes</option>
+                <option value="n">No</option>
+            </select><br><br>
             <button onclick="callREST()">Submit</button>
         </form>
     </body>
