--- a/rsvp/index.html
+++ b/rsvp/index.html
@@ -2,9 +2,9 @@
 <head>
 <script>
     function callREST() {
-        fetch(`https://gioandjake.com/submit/rsvp?name=${document.getElementById('name').value}&attending=${document.getElementById('attending').value}&plusone=${document.getElementById('plusone').value}`)
+        fetch(`https://gioandjake.com/rsvpWithToken?name=${document.getElementById('name').value}&attending=${document.getElementById('attending').value}&plusone=${document.getElementById('plusone').value}`)
             .then((response) => response.text())
-            .then(alert("Thank you!"));
+            .then(res => document.write(res));
     }
 </script>
 <style type="text/css">
